<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gd_events_label"
        style="@style/Widget.Github.Dev.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gd_feeds_label"
        style="@style/Widget.Github.Dev.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gd_notifications_label"
        style="@style/Widget.Github.Dev.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gd_starring_label"
        style="@style/Widget.Github.Dev.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gd_watching_label"
        style="@style/Widget.Github.Dev.Button.TextButton"/>

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gd_account_label"
        style="@style/Widget.Github.Dev.Button.TextButton"/>
</merge>