<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeViewModel"
            type="com.kw.project.module.features.home.ui.HomeViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".search.SearchFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="100dp"
            android:paddingBottom="100dp"
            style="@style/Widget.Github.Dev.Backdrop">
            <include layout="@layout/backdrop_menu"/>
        </LinearLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                app:contentInsetStart="0dp"
                app:navigationIcon="@drawable/gd_menu"
                app:title="@string/search_page_name"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_page_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:background="@color/searchPageBackgroundColor"
            android:elevation="6dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_results_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/unable_load_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unable_load_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorSecondaryDark"
                android:onClick="@{() -> homeViewModel.getTrendingRepository()}"
                android:text="@string/retry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/unable_load_message"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/unable_load_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="unable_load_message, retry"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>